--- a/asetss/css/index.css
+++ b/asetss/css/index.css
@@ -1,7 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Kadwa:wght@400;700&display=swap');
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: "Kadwa", serif;
+    line-height: 1.2;
 }
 
 :root {
@@ -10,6 +13,7 @@
     --green-light: #B4C8B1;
     --yellow-accent: #FFC107;
     --green-dark: #003500;
+    --black-overlay: rgba(0, 0, 0, 0.582);
 }
 
 .navbar {
@@ -84,7 +88,7 @@ textarea:focus {
 .banner {
     background-color: var(--yellow-accent);
     color: var(--green-dark);
-    padding: 8rem 5rem 2rem 5rem;
+    padding: 6rem 9rem;
     position: relative;
 }
 
@@ -108,7 +112,7 @@ textarea:focus {
 .button-baner {
     font-size: 1rem;
     font-weight: bolder;
-    padding: 0.3rem 1.5rem;
+    padding: 0.5rem 2rem;
     border: none;
     border-radius: 0.5rem;
     background-color: var(--green-light);
@@ -134,7 +138,8 @@ textarea:focus {
     margin: auto;
     text-align: center;
     top: 8rem;
-    width: 10rem;
+    width: 7rem;
+    font-size: 1.4rem;
 }
 
 .Pegatina-descuento img {
@@ -168,4 +173,97 @@ textarea:focus {
 
 .Fruit-image img {
     width: 100%;
+}
+
+.container {
+    color: var(--green-dark);
+}
+
+.porduct-introduction {
+    padding: 3rem 9rem;
+}
+
+.title-introduction {
+    display: flex;
+    justify-content: space-between;
+    margin: 2rem 0;
+}
+
+.text-titel {
+    font-size: 2rem;
+}
+
+.pordocts-section {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 1rem;
+}
+
+.pordoct-item {
+    width: 295px;
+    height: 301px;
+    border-radius: 1rem;
+    overflow: hidden;
+    position: relative;
+    color: var(--white);
+}
+
+.pordoct-item img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.pordoct-information {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    position: absolute;
+    bottom: 0;
+    padding: 1rem;
+    z-index: 1;
+    position: absolute;
+    border-radius: 1rem;
+    background-color: var( --black-overlay);
+    -webkit-backdrop-filter: blur(1px);
+    backdrop-filter: blur(1px);
+    width: 100%;
+    height: 100%;
+    bottom: -43%;
+    transition: bottom 0.4s ease;
+}
+
+.pordoct-item:hover .pordoct-information {
+    bottom: 0;
+}
+
+.pordoct-information h4 {
+    color: var(--yellow-accent);
+    font-size: 1.8rem;
+    font-weight: bolder;
+}
+
+.pordoct-information p {
+    font-size: 1.2rem;
+}
+
+.pordoct-information-button,
+.pordoct-button {
+    background-color: var(--yellow-accent);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+    width: fit-content;
+    padding: 0.4rem 1rem;
+    border-radius: 0.5rem;
+    color: var(--green-dark);
+    font-weight: bolder;
+    border: none;
+}
+
+.pordoct-information-button img,
+.pordoct-button img {
+    width: 0.5rem;
 }
