--- a/asetss/css/index.css
+++ b/asetss/css/index.css
@@ -8,10 +8,13 @@
 }
 
 :root {
+    --pink: #EF174B;
+    --orange: #E46002;
     --black: #000000;
     --white: #ffffff;
     --green-light: #B4C8B1;
     --yellow-accent: #FFC107;
+    --green-light2: #327613;
     --green-dark: #0A490A;
     --black-overlay: rgba(0, 0, 0, 0.582);
 }
@@ -19,10 +22,10 @@
 .navbar {
     background-color: var(--green-dark);
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: center;
     color: var(--white);
-    padding: 1.5rem;
+    padding: 3rem 9rem;
 }
 
 .menu {
@@ -181,7 +184,10 @@ textarea:focus {
 
 .porduct-introduction1,
 .porduct-introduction2,
-.porduct-introduction3 {
+.porduct-introduction3,
+.porduct-introduction4,
+.survey,
+.blogs {
     padding: 3rem 9rem;
 }
 
@@ -433,12 +439,17 @@ textarea:focus {
     list-style: none;
 }
 
-.yellow-accent {
+.porduct-introduction3-menu li {
+    cursor: pointer;
+}
+
+.click:focus {
     color: var(--yellow-accent);
 }
 
 .card-section3 {
     margin-top: 2rem;
+    position: relative;
 }
 
 .card-section3 .card-item {
@@ -449,4 +460,453 @@ textarea:focus {
 .card-section3 .plus,
 .card-section3 .minus {
     color: var(--green-dark);
+}
+
+.Left-arrow {
+    position: absolute;
+    top: 50%;
+    transform: translate(-120%);
+}
+
+.Right-arrow {
+    position: absolute;
+    top: 50%;
+    right: 0;
+    transform: translate(120%);
+}
+
+.juice-shake-container {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 3rem;
+}
+
+.card-Categories {
+    width: 20%;
+    padding: 5rem 0.8rem 0.8rem 0.8rem;
+    border-radius: 1rem;
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+    position: relative;
+}
+
+.card-Categories1 {
+    background-color: var(--orange);
+}
+
+.card-Categories2 {
+    background-color: var(--yellow-accent);
+}
+
+.card-Categories3 {
+    background-color: var(--green-light2);
+}
+
+.card-Categories4 {
+    background-color: var(--pink);
+}
+
+.card-Categories .sell-box {
+    color: var(--white);
+}
+
+.card-Categories .card-button {
+    border: 1px solid var(--black);
+}
+
+.card-Categories1 .Fruit-image {
+    position: absolute;
+    width: 80%;
+    top: -2rem;
+    right: -4rem;
+    filter: drop-shadow(10px 10px 4px rgba(0, 0, 0, 0.45));
+    ;
+}
+
+.card-Categories2 .Fruit-image {
+    position: absolute;
+    width: 60%;
+    top: -2rem;
+    right: -3rem;
+    filter: drop-shadow(10px 10px 4px rgba(0, 0, 0, 0.45));
+}
+
+.card-Categories3 .Fruit-image {
+    position: absolute;
+    width: 80%;
+    top: -2rem;
+    right: -3rem;
+    filter: drop-shadow(10px 10px 4px rgba(0, 0, 0, 0.45));
+    ;
+}
+
+.card-Categories4 .Fruit-image {
+    position: absolute;
+    width: 60%;
+    top: -2rem;
+    right: -3rem;
+    filter: drop-shadow(10px 10px 4px rgba(0, 0, 0, 0.45));
+    ;
+}
+
+.banner-mine {
+    display: flex;
+    flex-direction: row;
+}
+
+.banner-mine-right,
+.banner-mine-left {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-blend-mode: overlay;
+    padding: 7rem 0 4rem 0;
+    color: var(--white);
+}
+
+.banner-mine-right h1,
+.banner-mine-left h1 {
+    font-size: 2rem;
+}
+
+.banner-mine-right {
+    background: url(/asetss/img/minebanner1.jpg) center / cover no-repeat, rgba(0, 0, 0, 0.464);
+}
+
+.banner-mine-left {
+    background: url(/asetss/img/minebanner2.jpg) center / cover no-repeat, rgba(0, 0, 0, 0.464);
+}
+
+.banner-mine-left-item,
+.banner-mine-right-item {
+    width: 60%;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.banner-mine-right-item p,
+.banner-mine-left-item p {
+    font-size: 1rem;
+}
+
+.button-baner-mine {
+    width: 11.5rem;
+    color: var(--green-dark);
+    font-size: 1.1rem;
+    font-weight: bolder;
+    padding: 0.5rem 1rem;
+    border: none;
+    border-radius: 0.5rem;
+    background-color: var(--yellow-accent);
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 1rem;
+}
+
+.button-baner-mine img {
+    height: 70%;
+}
+
+.survey {
+    display: flex;
+    flex-direction: row;
+}
+
+.survey-content {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+}
+
+.survey-content p {
+    width: 70%;
+}
+
+.survey-button {
+    width: 11.5rem;
+    color: var(--green-dark);
+    font-size: 1.1rem;
+    font-weight: bolder;
+    padding: 0.5rem 1rem;
+    border: none;
+    border-radius: 0.5rem;
+    background-color: var(--yellow-accent);
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 1rem;
+}
+
+.survey-button img {
+    width: 7%;
+}
+
+.survey-testimonials {
+    width: 50%;
+}
+
+.testimonial-card {
+    width: 100%;
+    display: flex;
+    gap: 2rem;
+    position: relative;
+}
+
+.testimonial-card-left,
+.testimonial-card-right {
+    border: 1px solid var(--black);
+    border-radius: 1rem;
+    padding: 1rem;
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    gap: 0.4rem;
+}
+
+.testimonial-card-rating-star {
+    color: var(--yellow-accent);
+    font-size: 1.5rem;
+}
+
+.testimonial-card-rating-star-number {
+    font-size: 0.7rem;
+}
+
+.testimonial-card-text {
+    line-height: 1.7;
+}
+
+.testimonial-card-comment-box {
+    width: 100%;
+    display: flex;
+    gap: 10px;
+}
+
+.testimonial-card-avatar-box {
+    width: 3rem;
+    height: 3rem;
+}
+
+.testimonial-card-avatar {
+    width: 100%;
+    height: 100%;
+    border-radius: 100%;
+}
+
+.testimonial-name {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.testimonial-card-name {
+    font-weight: bolder;
+    font-size: large;
+}
+
+.testimonial-card-role {
+    font-size: small;
+}
+
+.testimonial-slider-arrow-prev,
+.testimonial-slider-arrow-next {
+    position: absolute;
+    top: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.testimonial-slider-arrow-prev {
+    left: -1rem;
+}
+
+.testimonial-slider-arrow-next {
+    right: -1rem;
+}
+
+.blogs {}
+
+.blog-section-header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
+}
+
+.blog-section-title {
+    font-size: 2.5rem;
+}
+
+.blog-section-description {
+    text-align: center;
+    width: 60%;
+}
+
+.blog-section-list {
+    display: flex;
+    gap: 6rem;
+    margin-top: 3rem;
+}
+
+.blog-card {
+    width: 33%;
+    height: 35rem;
+    border-radius: 0.5rem;
+    background-color: var(--white);
+}
+
+.blog-card img {
+    width: 100%;
+    height: 45%;
+    border-radius: 1rem;
+}
+
+.blog-card-information {
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+    padding: 0 1rem;
+    width: 85%;
+    height: 100%;
+}
+
+.blog-card h4 {
+    font-size: 1.5rem;
+    margin-top: 1.5rem;
+}
+
+.blog-card p {
+    font-size: 0.9rem;
+    line-height: 1.7;
+}
+
+.blog-card-button {
+    width: 11.5rem;
+    color: var(--green-dark);
+    font-size: 1.1rem;
+    font-weight: bolder;
+    padding: 0.5rem 1rem;
+    border: none;
+    border-radius: 0.5rem;
+    background-color: var(--yellow-accent);
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 1rem;
+}
+
+.blog-card-button img {
+    width: 7%;
+}
+
+.footer {
+    position: relative;
+    background-color: var(--green-dark);
+    color: var(--white);
+}
+
+.footer-background-box {
+    height: 25rem;
+    width: 100%;
+    position: absolute;
+    top: -25rem;
+    background-color: var(--green-dark);
+    z-index: -1;
+}
+
+.footer-section {
+    display: flex;
+    padding: 3rem 9rem;
+}
+
+.Foodmart,
+.features-section-container,
+.newsletter {
+    width: 33%;
+}
+
+.Foodmart,
+.features-section-box,
+.newsletter {
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+}
+
+.Foodmart h4 {
+    font-size: 1.2rem;
+    color: var(--yellow-accent);
+}
+
+.Foodmart p,
+.newsletter p {
+    font-size: 0.9rem;
+    margin-top: 0.5rem;
+    line-height: 1.5;
+}
+
+.features-section-container {
+    display: flex;
+    justify-content: space-around;
+}
+
+.features-section-title,
+.newsletter-title {
+    font-size: 1.2rem;
+}
+
+.features-section-list {
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.newsletter-form {
+    width: 80%;
+    height: 2.5rem;
+    position: relative;
+}
+
+.newsletter-input {
+    width: 100%;
+    height: 100%;
+    padding: 1rem;
+    background-color: var(--green-dark);
+    color: var(--white);
+    border: 1px solid var(--white);
+}
+
+.newsletter-input::placeholder {
+    color: var(--white);
+}
+
+.newsletter-button {
+    width: 3rem;
+    height: 100%;
+    position: absolute;
+    border: 1px solid var(--white);
+    background-color: var(--yellow-accent);
+    align-items: center
+}
+
+.footer-bottom {
+    padding: 0 9rem;
+    display: flex;
+    justify-content: space-between
+}
+
+.footer-copy,
+.footer-author {
+    font-size: 0.8rem;
+    margin: 1rem 0;
+}
+
+.footer-author span {
+    color: var(--yellow-accent);
 }
