--- a/asetss/css/index.css
+++ b/asetss/css/index.css
@@ -15,6 +15,10 @@
     line-height: 1.2;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 
 /* ===================== Color Palette ===================== */
 
@@ -83,12 +87,15 @@
 /* ===================== Header ===================== */
 
 .header {
-    padding: 3rem 9rem;
     background-color: var(--green-dark);
     color: var(--white);
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+
+.menu-mobile {
+    display: none;
 }
 
 
@@ -189,6 +196,7 @@ select option {
 
 /* ===================== Section Padding ===================== */
 
+.header,
 .banner,
 .porduct-introduction1,
 .product-category-section,
@@ -746,8 +754,7 @@ select option {
     position: relative;
 }
 
-.testimonial-card-left,
-.testimonial-card-right {
+.testimonial-card-box {
     border: 1px solid var(--black);
     border-radius: 1rem;
     padding: 1rem;
@@ -1011,14 +1018,126 @@ select option {
    ========================== */
 
 
-/* Small Mobile Devices (≤575px) */
-
-@media (max-width: 575px) {}
-
-
 /* Tablets (576px – 991px) */
 
 @media (max-width: 991px) {}
+
+
+/* Small Mobile Devices (≤575px) */
+
+@media (max-width: 575px) {
+    .menu {
+        display: none;
+    }
+    .search-box {
+        display: none;
+    }
+    .header-actions {
+        display: none;
+    }
+    .menu-mobile {
+        display: block;
+    }
+    /* ===================== Section Padding ===================== */
+    .header,
+    .banner,
+    .porduct-introduction1,
+    .product-category-section,
+    .green-product-category-section,
+    .colorful-product-category-section,
+    .category-reviews-section,
+    .blog-articles-section,
+    .footer-section,
+    .footer-bottom {
+        padding: 1.5rem 3rem;
+    }
+    .title {
+        font-size: 2.5rem;
+    }
+    .about {
+        width: 65%;
+        font-size: 0.8rem;
+    }
+    .button-baner {
+        padding: 0.3rem 1rem;
+        font-size: 0.5;
+        gap: 0.5rem;
+    }
+    .button-baner-mine img {
+        height: 70%;
+    }
+    .Pegatina-descuento {
+        position: absolute;
+        left: 8rem;
+        right: 0;
+        margin: auto;
+        text-align: center;
+        top: 1rem;
+        width: 5.5rem;
+        font-size: 1rem;
+    }
+    .category-title {
+        font-size: 1.5rem;
+    }
+    .green-product-category-section-menu ul {
+        gap: 1rem;
+        font-size: 0.7rem;
+    }
+    .yellow-button {
+        width: 7rem;
+        font-size: 0.7rem;
+        gap: 0.5rem;
+    }
+    .pordoct-item,
+    .product-card,
+    .card-Categories,
+    .banner-mine-right,
+    .banner-mine-left,
+    .survey-content,
+    .survey-testimonials,
+    .testimonial-card-box,
+    .blog-section-description,
+    .blog-card,
+    .Foodmart,
+    .features-section-container,
+    .newsletter {
+        width: 100%;
+    }
+    .product-cards,
+    .colorful-product-cards,
+    .category-reviews-section,
+    .testimonial-card,
+    .blog-section-list,
+    .footer-section {
+        flex-direction: column;
+        gap: 1.5rem;
+    }
+    .banner-mine {
+        flex-direction: column;
+    }
+    .footer-background-box {
+        height: 100rem;
+        top: -100rem;
+    }
+    .features-section-container {
+        justify-content: space-between
+    }
+    .testimonial-slider-arrow-next,
+    .testimonial-slider-arrow-prev,
+    .Left-arrow,
+    .Right-arrow {
+        display: none;
+    }
+    .card-Categories1 .Fruit-image,
+    .card-Categories3 .Fruit-image {
+        width: 45%;
+        right: -2.5rem;
+    }
+    .card-Categories2 .Fruit-image,
+    .card-Categories4 .Fruit-image {
+        width: 35%;
+    }
+}
 
 
 /* Small Laptops / Desktops (992px – 1199px) */
