--- a/asetss/css/index.css
+++ b/asetss/css/index.css
@@ -141,7 +141,7 @@ html {
 }
 
 #porduct-model .menu-content {
-    width: 45%;
+    width: 55%;
     height: 100%;
     position: fixed;
     top: 0;
@@ -152,15 +152,12 @@ html {
     box-shadow: 0 0 10px var(--black);
     display: flex;
     flex-direction: column;
+    gap: 1rem;
 }
 
 #porduct-model .menu-content .logo {
     display: flex;
     justify-content: center
-}
-
-hr {
-    margin: 1rem 0;
 }
 
 #porduct-model .menu-content .menu-mobile-content {
@@ -171,21 +168,60 @@ hr {
     align-items: start;
 }
 
+.menu-content .search-box-mobil {
+    position: relative;
+    width: 100%;
+    height: 2rem;
+}
+
+.menu-content .search-box-mobil .search-input {
+    width: 100%;
+    height: 100%;
+}
+
+.menu-content .search-box-mobil img {
+    position: absolute;
+    left: 2px;
+    top: 2px;
+    height: 85%;
+}
+
+.menu-mobile-content {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+}
+
+.menu-mobile-content .menu-mobile-list {
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    gap: 1.2rem;
+}
+
+.menu-mobile-content ul {
+    list-style: none;
+}
+
 .category-item {
     position: relative;
 }
 
+
+/* Subcategory dropdown */
+
 .subcategory-dropdown {
     position: absolute;
     top: 0;
-    right: 150%;
-    width: 200px;
+    right: 135%;
+    width: 180px;
     background-color: var(--green-dark);
     padding: 15px;
     z-index: 101;
     display: none;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     border-radius: 4px;
+    flex-direction: column;
     color: var(--white);
 }
 
@@ -193,19 +229,12 @@ hr {
     display: flex;
 }
 
-.subcategory-list {
-    list-style: none;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
+.subcategory-dropdown li:not(:last-child) {
+    border-bottom: 1px solid var(--white);
 }
 
-.subcategory-list li {
+.subcategory-dropdown li {
     padding: 0.5rem 0;
-}
-
-.subcategory-list li:not(:last-child) {
-    border-bottom: 1px solid #eee;
 }
 
 
@@ -1123,6 +1152,28 @@ select option {
     color: var(--yellow-accent);
 }
 
+.footer-nav {
+    width: 100vw;
+    display: none;
+    position: fixed;
+    bottom: 0;
+    z-index: 10;
+    padding: 0.4rem 1rem;
+    background-color: var(--green-dark);
+}
+
+.footer-nav-section {
+    display: flex;
+    justify-self: center;
+    justify-content: center;
+    align-items: center;
+    width: 25%;
+}
+
+.footer-nav-section img {
+    width: 2rem;
+}
+
 
 /* ==========================
 Responsive Media Queries
@@ -1148,6 +1199,9 @@ Responsive Media Queries
         position: sticky;
         top: 0;
         z-index: 999;
+    }
+    .footer-nav {
+        display: flex;
     }
     .header-menu {
         width: 100%;
@@ -1205,6 +1259,9 @@ Responsive Media Queries
     }
     .menu {
         display: none;
+    }
+    .footer-nav {
+        display: flex;
     }
     .menu-mobile {
         display: block;
@@ -1361,6 +1418,9 @@ Responsive Media Queries
     }
     .header-menu {
         justify-content: flex-end;
+    }
+    .footer-nav {
+        display: flex;
     }
     .menu {
         display: none;
@@ -1570,6 +1630,9 @@ Responsive Media Queries
         top: 0;
         z-index: 999;
     }
+    .footer-nav {
+        display: flex;
+    }
     .logo,
     .product-card,
     .card-Categories,
@@ -1777,6 +1840,9 @@ Responsive Media Queries
     .footer-section {
         padding: 1.5rem 3rem;
         flex-direction: column;
+    }
+    .footer-nav {
+        display: flex;
     }
     /* header bar  */
     .header {
